go code to laptop

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymleaf.org"
+      xmlns:sec="http://www.thymleaf.org/thymleaf-extras-springsecurity3">
+
 <head>
     <meta charset="UTF-8">
     <title>Bank-manager</title>
