--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
     <title>Bank-manager</title>
 </head>
 <body>
-    <h1>Hello, <span th:text="${user}" th:remove="tag"></span></h1>
+    <h1>Hello, <span th:text="${user}" th:remove="tag">Guest!</span></h1>
 </body>
 </html>
