--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -1,13 +1,13 @@
-<form th:fragment="login" th:action="@{/login}" method="POST">
+<form th:fragment="login" th:action="@{/login}" method="post">
     <input type="text" name="username" placeholder="Username"/>
     <input type="password" name="password" placeholder="Password"/>
     <button type="submit">login</button><span>&nbsp;or&nbsp;</span><a th:href="@{/registration}">Registration</a>
 </form>
 
-<form th:fragment="registration" th:action="@{/registration}" method="POST">
-    <input type="text" name="username" placeholder="Username" />
-    <input type="password" name="password" placeholder="Password" />
-    <input type="password" name="password2" placeholder="Password confirm" />
+<form th:fragment="registration" th:action="@{/registration}" method="post">
+    <input type="text" name="username" placeholder="Username" /><label th:if="${usernameError}" th:text="${usernameError}"></label>
+    <input type="password" name="password" placeholder="Password" /><label th:if="${passwordError}" th:text="${passwordError}"></label>
+    <input type="password" name="password2" placeholder="Password confirm" /><label th:if="${password2Error}" th:text="${password2Error}"></label>
     <input type="text" name="firstName" placeholder="First name" />
     <input type="text" name="lastName" placeholder="Last name" />
     <input type="text" name="secondName" placeholder="Second name" />
