--- a/src/main/resources/templates/fragments/assets.html
+++ b/src/main/resources/templates/fragments/assets.html
@@ -6,7 +6,9 @@
 
     <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
 
-    <script async th:src="@{/static/js/jquery-3.3.1.min.js}"></script>
-    <script async th:src="@{/static/js/bootstrap.min.js}"></script>
-
 </head>
+
+<div th:fragment="script" th:remove="tag">
+<script th:src="@{/static/js/jquery-3.3.1.min.js}"></script>
+<script th:src="@{/static/js/bootstrap.min.js}"></script>
+</div>
