--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -1,22 +1,61 @@
 <form th:fragment="login" th:action="@{/login}" method="post">
-    <div th:if="${param.error}">
+    <div th:if="${param.error}" class="alert alert-warning alert-dismissible fade show" role="alert">
         Invalid username and password or locked user.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
-    <div th:if="${param.logout}">
-        You have been logged out.
+    <div th:if="${param.logout}" class="alert alert-warning alert-dismissible fade show" role="alert">
+        You have been sign out.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
-    <input type="text" name="username" placeholder="Username"/>
-    <input type="password" name="password" placeholder="Password"/>
-    <input type="submit" value="Sign In"/><span>&nbsp;or&nbsp;</span><a th:href="@{/registration}">Registration</a>
+
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" name="username" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Username">
+        <small id="usernameHelp" class="form-text text-muted">We'll never share your username with anyone else.</small>
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>&nbsp;or&nbsp;<a th:href="@{/registration}">Registration</a>
 </form>
 
 <form th:fragment="registration" th:action="@{/registration}" method="post">
-    <input type="text" name="username" placeholder="Username" /><label th:if="${usernameError}" th:text="${usernameError}"></label>
-    <input type="password" name="password" placeholder="Password" /><label th:if="${passwordError}" th:text="${passwordError}"></label>
-    <input type="password" name="password2" placeholder="Password confirm" /><label th:if="${password2Error}" th:text="${password2Error}"></label>
-    <input type="text" name="firstName" placeholder="First name" />
-    <input type="text" name="lastName" placeholder="Last name" />
-    <input type="text" name="secondName" placeholder="Second name" />
-    <input type="text" name="address" placeholder="Address name" />
-    <button type="submit">Registration</button>
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" name="username" class="form-control" id="username" placeholder="Username">
+    </div>
+    <div class="form-row">
+        <div class="form-group col-6">
+            <label for="password">Password</label>
+            <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        <div class="form-group col-6">
+            <label for="password2">Confirm password</label>
+            <input type="password" name="password2" class="form-control" id="password2" placeholder="Confirm password">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-4">
+            <label for="firstName">First name</label>
+            <input class="form-control" type="text" name="firstName" id="firstName" placeholder="First name">
+        </div>
+        <div class="form-group col-4">
+            <label for="lastName">Last name</label>
+            <input class="form-control" type="text" name="lastName" id="lastName" placeholder="Last name">
+        </div>
+        <div class="form-group col-4">
+            <label for="secondName">First name</label>
+            <input class="form-control" type="text" name="secondName" id="secondName" placeholder="Second name">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="address">Address</label>
+        <input type="text" name="address" class="form-control" id="address" placeholder="Address">
+    </div>
+    <button type="submit" class="btn btn-primary">registration</button>
 </form>
