--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -59,3 +59,5 @@
     </div>
     <button type="submit" class="btn btn-primary">registration</button>
 </form>
+
+<form th:action="@{/invoice/${client}}"></form>
