add form invoice

--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -60,4 +60,48 @@
     <button type="submit" class="btn btn-primary">registration</button>
 </form>
 
-<form th:action="@{/invoice/${client}}"></form>
+<form th:fragment="addInvoice" th:action="@{/invoice}" class="form-inline"  method="post">
+    <div class="form-group" hidden>
+        <label for="client">Client</label>
+        <input type="text" name="client" id="client" th:value="${clientId}" readonly>
+    </div>
+    <div class="form-group" hidden>
+        <label for="number">Number</label>
+        <input type="text" name="number" id="number" value="10000000000000000000" readonly>
+    </div>
+    <div class="form-group" hidden>
+        <label for="cash">Number</label>
+        <input type="text" name="cash" id="cash" value="0" readonly>
+    </div>
+
+
+    <div class="form-group mx-sm-3 mb-2">
+        <label class="sr-only" for="order1">1 order</label>
+        <select class="custom-select" name="order1" id="order1">
+            <option value="40702" selected>(юридический) 40702</option>
+            <option value="42605">(частный) 42605</option>
+        </select>
+    </div>
+    <div class="form-group mx-sm-3 mb-2">
+        <label class="sr-only" for="order2">2 order</label>
+        <select class="custom-select" name="order2" id="order2">
+            <option value="643" selected>(RUB) 643</option>
+            <option value="978">(EUR) 978</option>
+            <option value="849">(USD) 849</option>
+            <option value=""></option>
+        </select>
+    </div>
+    <div class="form-group mx-sm-3 mb-2">
+        <label class="sr-only" for="order3">3 order</label>
+        <input type="text" class="form-control" id="order3" name="order3" th:value="${rn3}" readonly maxlength="1" minlength="1" size="1">
+    </div>
+    <div class="form-group mx-sm-3 mb-2">
+        <label class="sr-only" for="order4">4 order</label>
+        <input type="text" class="form-control" id="order4" name="order4" value="0000" readonly maxlength="4" minlength="4" size="4">
+    </div>
+    <div class="form-group mx-sm-3 mb-2">
+        <label for="order5" class="sr-only">5 order</label>
+        <input type="text" class="form-control" id="order5" name="order5" th:value="${rn5}" maxlength="7" minlength="7" size="7">
+    </div>
+    <button type="submit" class="btn btn-primary mb-2">Add</button>
+</form>
