--- a/src/main/resources/templates/userInvoice.html
+++ b/src/main/resources/templates/userInvoice.html
@@ -11,6 +11,8 @@
 
 <div class="container mt-3">
 
+    <form th:replace="fragments/forms :: addInvoice"></form>
+
     <table th:if="${!invoices.isEmpty()}" class="table table-bordered table-hover">
         <caption>Invoice list</caption>
         <thead>
