--- a/src/main/resources/templates/fragments/assets.html
+++ b/src/main/resources/templates/fragments/assets.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="ru" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
 <head th:fragment="header">
 
     <title th:text="${title}"></title>
@@ -12,3 +17,5 @@
 <script th:src="@{/static/js/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/static/js/bootstrap.min.js}"></script>
 </div>
+
+</html>
