--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="ru" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
+<!-- LOGIN -->
 <form th:fragment="login" th:action="@{/login}" method="post">
     <h3>Sing in</h3>
 
@@ -26,6 +32,8 @@
     <button type="submit" class="btn btn-primary">Login</button>&nbsp;or&nbsp;<a th:href="@{/registration}">Registration</a>
 </form>
 
+
+<!-- REGISTRATION -->
 <form th:fragment="registration" th:action="@{/registration}" method="post">
     <h3>Add new user</h3>
 
@@ -64,6 +72,8 @@
     <button type="submit" class="btn btn-primary">registration</button>
 </form>
 
+
+<!-- INVOICE -->
 <form th:fragment="addInvoice" th:action="@{/invoice}" class="form-inline"  method="post">
     <h5>Add new invoice</h5>
 
@@ -104,3 +114,41 @@
     </div>
     <button type="submit" class="btn btn-primary mb-2">Add</button>
 </form>
+
+
+<!-- TRANSACTION -->
+<form th:fragment="transaction" th:action="@{/transaction}" method="post">
+    <h3>Transaction</h3>
+
+    <div class="alert alert-danger" role="alert"
+         th:if="${errorCash}"
+         th:text="${erroeCash}">
+    </div>
+
+    <div class="form-group">
+        <label for="cash">Cash</label>
+        <input type="number" class="form-control is-valid" name="cash" id="cash" min=0 max=9999999999999,99 maxlength=14,2 placeholder="Enter summary cash">
+    </div>
+    <div class="form-group">
+        <label for="sender">Sender invoice</label>
+        <select class="custom-select" name="sender" id="sender">
+            <option th:each="s : ${senderInvoice}" th:object="${s}"
+                    th:value="*{number}"
+                    th:text="*{number} + ' (' + *{cash} + ')'">
+            </option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="recipient">Recipient invoice</label>
+        <select class="custom-select" name="recipient" id="recipient">
+            <option th:each="r : ${recipientInvoice}" th:object="${r}"
+                    th:value="*{id}"
+                    th:text="*{number} + ' (' + *{cash} + ')'">
+            </option>
+        </select>
+    </div>
+
+    <button class="btn btn-primary">Transact</button>
+</form>
+
+</html>
