--- a/src/main/resources/templates/transaction.html
+++ b/src/main/resources/templates/transaction.html
@@ -16,7 +16,9 @@
             <thead>
             <tr>
                 <td scope="col">id</td>
+                <td scope="col">type</td>
                 <td scope="col">cash</td>
+                <td scope="col">invoice summary cash</td>
                 <td scope="col">time</td>
                 <td scope="col">date</td>
             </tr>
