--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -121,13 +121,13 @@
     <h3>Transaction</h3>
 
     <div class="alert alert-danger" role="alert"
-         th:if="${errorCash}"
-         th:text="${erroeCash}">
+         th:if="${errorCash}">
+
     </div>
 
     <div class="form-group">
         <label for="cash">Cash</label>
-        <input type="number" class="form-control is-valid" name="cash" id="cash" min=0 max=9999999999999,99 maxlength=14,2 placeholder="Enter summary cash">
+        <input type="number" class="form-control is-valid" name="cash" id="cash" min=0 max=9999999999999,99 maxlength=14 step="0.01" placeholder="0,00">
     </div>
     <div class="form-group">
         <label for="sender">Sender invoice</label>
