--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -61,7 +61,7 @@
             <input class="form-control" type="text" name="lastName" id="lastName" placeholder="Last name">
         </div>
         <div class="form-group col-4">
-            <label for="secondName">First name</label>
+            <label for="secondName">Second name</label>
             <input class="form-control" type="text" name="secondName" id="secondName" placeholder="Second name">
         </div>
     </div>
@@ -148,6 +148,32 @@
     </div>
 
     <button class="btn btn-primary">Transact</button>
+</form>
+
+<!-- UPDATEUSER -->
+<form th:fragment="updateUser" th:action="@{/user/profile}" th:object="${user}" method="post">
+    <h3>Update profile</h3>
+
+    <div class="alert alert-success" role="alert"
+         th:if="${success}"
+         th:text="${success}">
+    </div>
+    <div class="alert alert-danger" role="alert"
+         th:if="${errorUpdateProfile}"
+         th:text="${errorUpdateProfile}">
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-6">
+            <label for="password">Password</label>
+            <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        <div class="form-group col-6">
+            <label for="password2">Confirm password</label>
+            <input type="password" name="password2" class="form-control" id="password2" placeholder="Confirm password">
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary">save</button>
 </form>
 
 </html>
