--- a/src/main/resources/templates/fragments/navs.html
+++ b/src/main/resources/templates/fragments/navs.html
@@ -20,8 +20,8 @@
             <li sec:authorize="isAuthenticated()" class="nav-item">
                 <a class="nav-link" th:href="@{/transaction}">Transaction</a>
             </li>
-            <li sec:authorize="hasAuthority('ADMIN')" class="nav-item dropdown">
-            <!--<li sec:authorize="isAuthenticated()" class="nav-item dropdown">-->
+            <!--<li sec:authorize="hasAuthority('ADMIN')" class="nav-item dropdown">-->
+            <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Admin
                 </a>
