--- a/src/main/resources/templates/admin/transactions.html
+++ b/src/main/resources/templates/admin/transactions.html
@@ -44,8 +44,8 @@
             </select>
         </div>
         <div class="form-group mb-2">
-            <label class="sr-only" for="tstz">date</label>
-            <input type="datetime-local" class="form-control" id="tstz" name="tstz">
+            <label class="sr-only" for="date">date</label>
+            <input type="date" class="form-control" id="date" name="date">
         </div>
 
     </form>
@@ -77,7 +77,7 @@
         </tbody>
     </table>
 
-    <div th:if="${transactions.isEmpty()}" class="alert alert-warning alert-dismissible fade show" role="alert">
+    <div th:if="${transactions.isEmpty()}" class="alert alert-danger alert-dismissible fade show" role="alert">
         No transactions.
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
