--- a/src/main/resources/templates/fragments/assets.html
+++ b/src/main/resources/templates/fragments/assets.html
@@ -11,6 +11,12 @@
 
     <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
 
+    <style>
+        body {
+            background: url("/static/img/isometropolis.jpg");
+        }
+    </style>
+
 </head>
 
 <div th:fragment="script" th:remove="tag">
