--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -9,7 +9,7 @@
 
     <nav th:replace="fragments/navs :: navbar"></nav>
 
-    <div class="container mt-3">
+    <div class="container mt-5 bg-light p-5">
 
         <table th:if="${!users.isEmpty()}" class="table table-bordered table-hover">
             <caption>User list</caption>
