--- a/src/main/resources/templates/fragments/navs.html
+++ b/src/main/resources/templates/fragments/navs.html
@@ -3,39 +3,37 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-white">
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" th:href="@{/}">Bank-manager</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-            aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div sec:authorize="isAuthenticated()" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li sec:authorize="isAuthenticated()" class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" th:href="@{/invoice}">Invoice</a>
             </li>
-            <li sec:authorize="isAuthenticated()" class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" th:href="@{/transaction}">Transaction</a>
             </li>
             <li sec:authorize="hasAuthority('ADMIN')" class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="true">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Admin
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" th:href="@{/user/all}">Users</a>
                     <a class="dropdown-item" th:href="@{/invoice/all}">Invoice</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" th:href="@{/transaction/all}">Transaction</a>
                 </div>
             </li>
         </ul>
-
-        <form class="form-inline my-2 my-lg-0" sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
-            <a class="text-secondary mr-2 mt-1" th:href="@{/user/profile}" th:text="${user?.username}"></a>
+        <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
+            <a class="text-secondary mr-1 mt-1" th:href="@{/user/profile}" th:text="${user.username}"></a>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Out</button>
         </form>
     </div>
