--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
     <nav th:replace="fragments/navs :: navbar"></nav>
 
-    <div class="container mt-3">
+    <div class="container mt-5 bg-light p-5">
         <h3 th:text="${'Hello, ' + user.firstName + '!'}"></h3>
     </div>
 
