--- a/src/main/resources/templates/transaction.html
+++ b/src/main/resources/templates/transaction.html
@@ -9,10 +9,10 @@
 
     <nav th:replace="fragments/navs :: navbar"></nav>
 
-    <div class="row mx-5 mt-3">
+    <div class="row mx-5 mt-5 bg-light p-5">
         <div class="col col-6">
             <h3>Debits</h3>
-            <table th:if="${!debits.isEmpty()}" class="table table-bordered table-hover">
+            <table th:if="${!debits.isEmpty()}" class="table table-bordered table-hover table-info">
                 <caption>Debits transaction list</caption>
                 <thead>
                 <tr>
@@ -48,7 +48,7 @@
 
         <div class="col col-6">
             <h3>Credits</h3>
-            <table th:if="${!credits.isEmpty()}" class="table table-bordered table-hover">
+            <table th:if="${!credits.isEmpty()}" class="table table-bordered table-hover table-danger">
                 <caption>Credits transaction list</caption>
                 <thead>
                 <tr>
@@ -83,9 +83,7 @@
         </div>
     </div>
 
-    <div class="container mt-3">
-
-        <hr/>
+    <div class="container mt-3 bg-light p-5">
 
         <form th:replace="fragments/forms :: transaction"></form>
 
