--- a/src/main/resources/templates/userInvoice.html
+++ b/src/main/resources/templates/userInvoice.html
@@ -9,7 +9,7 @@
 
 <nav th:replace="fragments/navs :: navbar"></nav>
 
-<div class="container mt-3">
+<div class="container mt-5 bg-light p-5">
 
     <div th:if="${errorAdd}" class="alert alert-danger" role="alert">
         Invoice exist!
